<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="10dp"
        android:text="@string/line_thickness"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textView2"
        />

    <TextView
        android:id="@+id/clrtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/textView2"
        android:layout_marginStart="60dp"
        android:text="@string/line_color"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clrtxt"
        android:layout_marginLeft="55dp"
        android:layout_toRightOf="@id/spinner1"
        android:theme="@style/CustomRadioButtonStyle"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="redline"
            android:text="@string/red"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="yellowline"
            android:text="@string/yellow"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyan"
            android:onClick="cyan"
            android:textSize="14sp" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="250dp"
        android:layout_marginRight="4dp">

        <TextView
            android:id="@+id/arrw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="38dp"
            android:textColor="@color/black"
            android:text="@string/arrow_keys" />

        <Button
            android:id="@+id/up"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@id/arrw"
            android:theme="@style/ArrowButtonStyle"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_keyboard_arrow_up_black_24dp"
            android:onClick="drawup" />

        <Button
            android:id="@+id/down"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@id/arrw"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="81dp"
            android:theme="@style/ArrowButtonStyle"
            android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:onClick="drawdown" />

        <Button
            android:id="@+id/left"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@id/arrw"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="43dp"
            android:theme="@style/ArrowButtonStyle"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:onClick="drawleft" />


        <Button
            android:id="@+id/right"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@id/arrw"
            android:layout_marginLeft="95dp"
            android:theme="@style/ArrowButtonStyle"
            android:layout_marginTop="43dp"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:onClick="drawright" />

    </RelativeLayout>

    <Button
        android:id="@+id/clearbutton"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/color"
        android:layout_marginTop="40dp"
        android:onClick="clearall"
        android:text="@string/clear_canvas"
        android:theme="@style/ButtonStyle"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/help"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:layout_below="@id/color"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="91dp"
        android:layout_toRightOf="@id/clearbutton"
        android:text="@string/textview"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="397dp"
        android:layout_height="489dp"
        android:layout_below="@id/clearbutton"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/ImageViewForDrawing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="20px"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="20px"
            android:layout_marginBottom="7dp"
            android:minWidth="300px"
            android:minHeight="300px">
        </ImageView>


    </RelativeLayout>


</RelativeLayout>